# AI-Foundations-Project

./: README.md  docu.md  doku.md  pyproject.toml
backend/: pyproject.toml
backend/src/ai_foundations_project/: get_that_poem.py
frontend/: package.json
frontend/src/: App.tsx
src/ai_foundations_project/: get_that_poem.py
