[project]
name = "ai-foundations-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Nukufel",email = "niklas.vogel@bluewin.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=2.4.0,<3.0.0)",
    "fastapi[standard] (>=0.119.0,<0.120.0)",
]

[project.scripts]
main = "src/ai_foundations_project/main.py"


[tool.poetry]
packages = [{include = "ai_foundations_project", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

